Converting pandas to sql to function inside a module, and fixing issues with data values handling  (e.g. converting int64 to numpy int64 and numpy NaNs to NULL for sql insertion

--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     
     volumes:
       - postgres:/data/postgres
-    
+      - ./create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql    
     ports:
       - "5432:5432"
 
