--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -7,14 +7,15 @@ COPY ./main.py /app/
 COPY ./client_secrets.json /app/
 COPY ./modulos/ /app/modulos/
 COPY ./requirements.txt /app/
-# COPY ./datos/datos_ini/ /datos/datos_ini/
 COPY .env /app/
 
 WORKDIR /app/
 RUN apt-get update
-#Installing gcc compiler for psycopg
+
+#Installing gcc compiler for psycopg2 python library
 RUN apt-get install gcc -y 
 RUN apt-get install libpq-dev -y
+
 RUN pip install -r requirements.txt
 
 
